ewc: clipped avatar images, backed out bgimage, fixed zindex

--- a/public/css/core.css
+++ b/public/css/core.css
@@ -1,16 +1,12 @@
-html {
-  background: url("/img/bg.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 body {
   font-family: Sans-Serif;
 }
 
+.dg.ac {
+  z-index: 10;
+}
+
 canvas {
-  opacity: 0.75;
+  opacity: 0.85;
 }
 
